--- a/dashboard/src/style.scss
+++ b/dashboard/src/style.scss
@@ -15,6 +15,7 @@ body {
 html {
     transform-origin: center;
     // transform: scale(0.65) rotate(30deg);
+    background-color: black;
 }
 
 * {
@@ -27,7 +28,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    background: #ff0000;
+    background: #282828;
 }
 
 .cameras {
@@ -35,14 +36,62 @@ body {
 }
 
 #nt-table {
-    .table-info {
+    &> * {
+        font-size: .9rem !important;
+        line-height: 1.5rem;
+    }
+    .nt-div-container {
+        margin-left: 8px;
+        padding-left: 8px;
+        border-left: 3px solid #504945;
+    }
+
+    .nt-div {
+        position: relative;
+        border-top: 1px solid #504945;
+
+        &.disabled > .nt-div-container {
+            display: none;
+        }
+
+        &.disabled::before {
+            content: "";
+            position: absolute;
+            padding-left: 2px;
+            color: #a89984;
+        }
+
+        &:not(.disabled)::before {
+            content: "";
+            position: absolute;
+            padding-left: 2px;
+            color: #a89984;
+        }
+
+        .nt-title {
+            padding-left: 20px;
+        }
+    }
+
+    .nt-item {
         display: flex;
         flex-direction: row;
-        .table-label {
-            flex: 1;
+        justify-content: stretch;
+
+        &:first-of-type > .nt-key {
+            border-radius: .5rem 0 0 0;
         }
-        .table-area {
-            flex: 2;
+
+        .nt-key {
+            flex: 1;
+            background-color: #3c3836;
+            padding-left: .5rem;
+        }
+
+        .nt-value {
+            flex: 3;
+            background-color: #3c3836;
+            padding-left: .5rem;
         }
     }
 }
