--- a/dashboard/src/style.scss
+++ b/dashboard/src/style.scss
@@ -3,6 +3,8 @@
     src: url("asset/FiraCodeNerdFontPropo-Retina.ttf") format("truetype");
 }
 
+@import "./nt.scss";
+
 html,
 body {
     margin: 0;
@@ -35,74 +37,14 @@ body {
 
 main {
     display: grid;
-    grid-template:
-        240px auto / 240px 320px 320px auto
-}
-
-#nt-table {
-    &> * {
-        font-size: .9rem !important;
-        line-height: 1.5rem;
-    }
-    .nt-div-container {
-        margin-left: 8px;
-        padding-left: 8px;
-        border-left: 3px solid #504945;
-    }
-
-    .nt-div {
-        position: relative;
-        border-top: 1px solid #504945;
-
-        &.disabled > .nt-div-container {
-            display: none;
-        }
-
-        &.disabled::before {
-            content: "";
-            position: absolute;
-            padding-left: 2px;
-            color: #a89984;
-        }
-
-        &:not(.disabled)::before {
-            content: "";
-            position: absolute;
-            padding-left: 2px;
-            color: #a89984;
-        }
-
-        .nt-title {
-            padding-left: 20px;
-        }
-    }
-
-    .nt-item {
-        display: flex;
-        flex-direction: row;
-        justify-content: stretch;
-
-        &:first-of-type > .nt-key {
-            border-radius: .5rem 0 0 0;
-        }
-
-        .nt-key {
-            flex: 1;
-            background-color: #3c3836;
-            padding-left: .5rem;
-        }
-
-        .nt-value {
-            flex: 3;
-            background-color: #3c3836;
-            padding-left: .5rem;
-        }
-    }
+    grid-template: 240px auto / 320px 320px 240px auto;
+    grid-template-areas:
+        "cam cam swerve ."
+        "menu menu menu menu";
 }
 
 .swerve {
-    width: 240px;
-    height: 240px;
+    grid-area: swerve;
     background: #3c3836;
     position: relative;
 
@@ -132,4 +74,11 @@ main {
         height: 80px;
         width: 80px;
     }
+}
+
+#camera {
+    grid-area: cam;
+    background-image: url("./asset/doh.png");
+    width: 100%;
+    height: 100%;
 }
