dont stretch camera image when theres only one camera

--- a/dashboard/src/style.scss
+++ b/dashboard/src/style.scss
@@ -102,6 +102,7 @@ main {
 }
 
 #camera {
+    object-fit: contain;
     grid-area: cam;
     background-image: url("./asset/doh.png");
     width: 100%;
